GL/Projet_GL/src/test/deca/context/valid/sansObjet/bool/boolean_or_expression.deca
// Test : boolean_or_expression
// But : tester l’opérateur logique ||.
// Couvre : booléens, opérateur OR.
// Résultat attendu : compilation sans erreur.

{
    boolean b;
    b = true || false;
}